# hazel-rs

./: Cargo.toml  README.md
examples/sandbox/: .gitignore  Cargo.toml  imgui.ini
examples/sandbox/src/: main.rs
examples/sandbox/src/assets/shaders/: frag_blue.glsl  vert.glsl  vert_blue.glsl
hazel-rs-lib/: Cargo.toml
hazel-rs-lib/src/: imgui.rs  layers.rs  lib.rs  renderer.rs  text_layer.rs
hazel-rs-lib/src/layers/: debug_text.rs  iced_ui.rs  imgui.rs  mod.rs
src/: event.rs  lib.rs  main.rs  renderer.rs
src/assets/shaders/: vert_blue.glsl
src/input/: mod.rs
src/layers/: debug_text.rs  iced_ui.rs  imgui.rs  mod.rs
src/renderer/: buffer.rs  mod.rs  orthographic_camera.rs  pipeline.rs  primitives.rs  renderer_api.rs  shader.rs  utils.rs
src/renderer/shaders/: frag.glsl  shader.frag  shader.vert  vert.glsl
