[package]
authors = [ 'IceSentry <c.giguere42@gmail.com>' ]
edition = '2018'
name    = 'hazel'
version = '0.1.0'

[dependencies]
anyhow     = '1.0.31'
derive-new = "0.5.8"

futures             = '0.3.5'
gfx-memory          = "=0.1.1"
imgui               = '0.4.0'
imgui-winit-support = '0.4.0'
log                 = '0.4.8'

wgpu_glyph         = '0.9.0'
winit              = '0.22.2'
winit_input_helper = "0.7.0"
mint = "0.5.5"
glam = "0.8.7"

  [dependencies.iced_winit]
  git = 'https://github.com/hecrj/iced'

  [dependencies.iced_wgpu]
  git = 'https://github.com/hecrj/iced'

  [dependencies.imgui-wgpu]
  git = 'https://github.com/Yatekii/imgui-wgpu-rs'

  [dependencies.wgpu]
  features = [ 'vulkan' ]
  version  = '0.5.0'

[workspace]
members = [ "examples/sandbox" ]
